# uvector

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: lib.rs
tests/: vecdeque.rs
