[package]
name = "uvector"
version = "0.1.0"
authors = ["Pavel Shaydo <zwon@trinitum.org>"]
description = "access two slices as a single continuous vector"
readme = "README.md"
repository = "https://github.com/trinitum/uvector"
keywords = ["vecdeque"]
categories = ["data-structures"]
license = "MIT"

[badges]
github = { repository="trinitum/uvector.git" }
travis-ci = { repository="trinitum/uvector.git" }
maintenance = { status = "experimental" }
