[package]
name = "uvector"
version = "0.2.0"
authors = ["Pavel Shaydo <zwon@trinitum.org>"]
description = "access two slices as a single continuous vector"
readme = "README.md"
repository = "https://github.com/trinitum/uvector"
keywords = ["vecdeque"]
categories = ["data-structures"]
license = "MIT"

[badges]
travis-ci = { repository="trinitum/uvector" }
maintenance = { status = "experimental" }
